# ScientificComputing2024

./: .gitignore
Excercises/MatrixMultiplicationThreads/: CMakeLists.txt
Excercises/MatrixMultiplicationThreads/src/: BlockMult.cc  MatrixMult.cc  SliceMult.cc
Excercises/MatrixMultiplicationThreads/src/include/: BlockMult.hh  MatrixMult.hh  SliceMult.hh
Excercises/MatrixMultiplicationThreads/src_test/: main.cc  main2.cc  test_MatrixMultThreadpool.cc
Excercises/Sudoku/: .gitignore  CMakeLists.txt  external.cmake
Excercises/Sudoku/src/: main.cc  sudoku.cc  sudoku.hh  sudokuUtils.cc
Excercises/Sudoku/src/include/: sudokuUtils.hh
day3/: CMakeLists.txt
day3/src/: day3.cc
day3_2/: CMakeLists.txt
day3_2/src_test/: ThreadExample.cc  ThreadExample.hh  ThreadSafeClass.cc
day4/: CMakeLists.txt
day4/src/include/: ThreadPool.hh
day4/src_test/: EigenTest.cc
